--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
   <title>premierleague</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
   <header>
@@ -32,6 +33,7 @@
 
 </section>
 
+
   <section>
     <h2>clubs</h2>
     <ul>
@@ -55,11 +57,55 @@
     <img src="https://resources.premierleague.com/premierleague/badges/rb/t39.svg" class="clubs">
     <img src="https://resources.premierleague.com/premierleague/badges/rb/t54.svg" class="clubs">
     </ul>
+
   </section>
+
+<section>
+  <table class="table prtable">
+    <thead class="table-dark">
+      <tr>
+        <th>Team</th>
+        <th>Played</th>
+        <th>Won</th>
+        <th>Drawn</th>
+        <th>Lost</th>
+        <th>Points</th>
+      </tr>
+    </thead>
+    <tbody>  
+        <tr>
+          <td>Man City</td>
+          <td>38</td>
+          <td>32</td>
+          <td>3</td>
+          <td>3</td>
+          <td>99</td>
+        </tr>
+        <tr>
+          <td>Everton</td>
+          <td>38</td>
+          <td>32</td>
+          <td>3</td>
+          <td>3</td>
+          <td>99</td>
+        </tr>
+        <tr>
+          <td>Liverpool</td>
+          <td>38</td>
+          <td>32</td>
+          <td>3</td>
+          <td>3</td>
+          <td>99</td>
+        </tr> 
+    </tbody>
+  </table>
+</section>
 
   <footer>
     <p>&copy; 2022 My Homepage. All rights reserved.</p>
+    <p>&copy; 2022 My Homepage. All rights reserved.</p>
   </footer>
+  
 
   <script src="script.js"></script>
 </body>
